# scout_commander_docker

./: Dockerfile  README.md  cyclonedds.xml  docker-compose.yaml  ros_entrypoint.sh
data/interfaces_ros2/: README.md
data/interfaces_ros2/.circleci/: config.yml
data/interfaces_ros2/api_interfaces/: CMakeLists.txt  package.xml
data/interfaces_ros2/api_interfaces/action/: GPSAction.action  RouteAction.action
data/interfaces_ros2/api_interfaces/msg/: POI.msg
data/interfaces_ros2/api_interfaces/srv/: ExportData.srv  FindShortestPathGPS.srv  FindShortestPathPOI.srv  GPSPoint.srv  GPSPoints.srv  GPSRoutePoints.srv  POICall.srv  POIInfo.srv  POILink.srv  POIReturns.srv  Route.srv  RouteGPS.srv  RouteInfo.srv  SaveRoute.srv  StringResponse.srv
data/interfaces_ros2/breadcrumbs_msgs/: CMakeLists.txt  package.xml
data/interfaces_ros2/breadcrumbs_msgs/msg/: GpsPoint.msg  GpsPointArray.msg  POI.msg
data/interfaces_ros2/geojson_msgs/: CMakeLists.txt  package.xml
data/interfaces_ros2/geojson_msgs/msg/: CRS.msg  Coordinates.msg  Feature.msg  GeoJSON.msg  Geometry.msg
data/interfaces_ros2/interfaces/: CMakeLists.txt  package.xml
data/interfaces_ros2/interfaces/action/: MoveTo.action  PTZPosition.action  VideoCapture.action
data/interfaces_ros2/interfaces/msg/: DPad.msg  ImageCapture.msg  ModemInfoMSG.msg  PTZPosition.msg  SwiftNavOutput.msg  ThermalCamera.msg  WiBoticInfo.msg
data/interfaces_ros2/interfaces/srv/: ImageCapture.srv  ResetPTZ.srv
data/scout_commander/: .gitattributes  README.md
data/scout_commander/scout_mini_control/: package.xml  setup.cfg  setup.py
data/scout_commander/scout_mini_control/config/: cyclonedds.xml
data/scout_commander/scout_mini_control/launch/: navigation_bringup.launch.py  scout_bringup.launch.py  waypoint_follower.launch.py
data/scout_commander/scout_mini_control/launch/include/: navigation.launch.py  rviz2_localization.launch.py  rviz2_mapping.launch.py
data/scout_commander/scout_mini_control/maps/: rtabmap.db  waypoints.txt
data/scout_commander/scout_mini_control/params/: ekf_params.yaml  nav2_params.yaml  scout_mini.json
data/scout_commander/scout_mini_control/scout_mini_control/: __init__.py  scout_mini_control.py  waypoint_follower.py
data/scout_commander/scout_mini_control/scout_mini_control/include/: __init__.py  return_to_home.py  robot_navigator.py
data/scout_commander/scout_mini_description/: package.xml  setup.cfg  setup.py
data/scout_commander/scout_mini_description/config/: localization.rviz  mapping.rviz  nav2.rviz
data/scout_commander/scout_mini_description/models/commander_slim/xacro/: commander_slim.xacro
data/scout_commander/scout_mini_description/models/scout_mini/xacro/: scout_mini_tf.xacro  scout_mini_wheel.xacro
data/scout_commander/scout_mini_description/scout_mini_description/: spawn_scout_mini.py
data/scout_ros2_nav/: README.md
data/scout_ros2_nav/scout_base/: CMakeLists.txt  package.xml
data/scout_ros2_nav/scout_base/include/scout_base/: scout_base_ros.hpp  scout_messenger.hpp
data/scout_ros2_nav/scout_base/launch/: scout_base.launch.py  scout_mini_base.launch.py  scout_mini_omni_base.launch.py
data/scout_ros2_nav/scout_base/src/: scout_base_ros.cpp
data/ugv_sdk/: README.md
