<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_mini_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="liamd@indrorobotics.com">liamd</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclpy</depend>


  <!-- Visualization Dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rmw_cyclonedds_cpp</exec_depend>

  <!-- Navigation Dependencies -->
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- Package Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
